--- a/approx_conv.ipynb
+++ b/approx_conv.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "from utils.custom_activations import StepActivation\n",
     "from utils.modules import Parallel, MaxLayer, MaxHierarchicalLayer\n",
-    "from utils.misc import cross_valid, combine_prompts, cov_score, train_model\n",
+    "from utils.misc import cross_valid, combine_prompts, cov_score, get_current_epoch\n",
     "\n",
     "# torch.autograd.set_detect_anomaly(True)"
    ]
@@ -80,12 +80,23 @@
    "outputs": [],
    "source": [
     "intermediate_outputs = {}\n",
-    "def get_intermediate_outputs(name):\n",
+    "def get_intermediate_outputs_batch(name):\n",
+    "    epoch = -1\n",
+    "    combined_output = None\n",
     "    def hook(model, input, output):\n",
+    "        nonlocal epoch, combined_output\n",
+    "        new_epoch = get_current_epoch()\n",
+    "        if new_epoch != epoch:\n",
+    "            combined_output = OrderedDict()\n",
+    "            epoch = new_epoch\n",
+    "\n",
+    "        for k, v in output.items():\n",
+    "            combined_output[k] = torch.concat([combined_output.get(k, torch.Tensor([])), v])\n",
+    "\n",
     "        if model.training:\n",
-    "            intermediate_outputs.setdefault(name, dict())[\"train\"] = output\n",
+    "            intermediate_outputs.setdefault(name, dict())[\"train\"] = combined_output\n",
     "        else:\n",
-    "            intermediate_outputs.setdefault(name, dict())[\"valid\"] = output\n",
+    "            intermediate_outputs.setdefault(name, dict())[\"valid\"] = combined_output\n",
     "    return hook\n",
     "\n",
     "def true_label_for_backward(train, valid):\n",
@@ -213,16 +224,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
+      "Fold   1 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.998    |    CentralNet     0.998    ||    Net            0.506    |    CentralNet     0.506\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            1.000    |    Net            0.997    ||    Net            0.498    |    Net            0.509\n",
+      "\t              CentralNet     1.000    |    CentralNet     0.997    ||    CentralNet     0.498    |    CentralNet     0.509\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold   2 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.999    |    CentralNet     0.999    ||    Net            0.508    |    CentralNet     0.508\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.998    |    Net            1.000    ||    Net            0.509    |    Net            0.508\n",
+      "\t              CentralNet     0.998    |    CentralNet     1.000    ||    CentralNet     0.509    |    CentralNet     0.508\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold   3 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            1.000    |    CentralNet     1.000    ||    Net            0.496    |    CentralNet     0.496\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.496    |    Net            0.496\n",
+      "\t              CentralNet     1.000    |    CentralNet     1.000    ||    CentralNet     0.496    |    CentralNet     0.496\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold   4 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.999    |    CentralNet     0.999    ||    Net            0.493    |    CentralNet     0.493\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            1.000    |    Net            0.998    ||    Net            0.493    |    Net            0.493\n",
+      "\t              CentralNet     1.000    |    CentralNet     0.998    ||    CentralNet     0.493    |    CentralNet     0.493\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold   5 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.993    |    CentralNet     0.993    ||    Net            0.497    |    CentralNet     0.497\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.988    |    Net            0.998    ||    Net            0.491    |    Net            0.499\n",
+      "\t              CentralNet     0.988    |    CentralNet     0.998    ||    CentralNet     0.491    |    CentralNet     0.499\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold   6 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            1.000    |    CentralNet     1.000    ||    Net            0.507    |    CentralNet     0.507\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.507    |    Net            0.507\n",
+      "\t              CentralNet     1.000    |    CentralNet     1.000    ||    CentralNet     0.507    |    CentralNet     0.507\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold   7 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.955    |    CentralNet     0.955    ||    Net            0.518    |    CentralNet     0.518\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.919    |    Net            0.988    ||    Net            0.454    |    Net            0.540\n",
+      "\t              CentralNet     0.919    |    CentralNet     0.988    ||    CentralNet     0.454    |    CentralNet     0.540\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold   8 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.999    |    CentralNet     0.999    ||    Net            0.497    |    CentralNet     0.497\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.998    |    Net            1.000    ||    Net            0.497    |    Net            0.497\n",
+      "\t              CentralNet     0.998    |    CentralNet     1.000    ||    CentralNet     0.497    |    CentralNet     0.497\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold   9 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.994    |    CentralNet     0.994    ||    Net            0.502    |    CentralNet     0.502\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.997    |    Net            0.992    ||    Net            0.504    |    Net            0.501\n",
+      "\t              CentralNet     0.997    |    CentralNet     0.992    ||    CentralNet     0.504    |    CentralNet     0.501\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "Fold  10 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.438    |    CentralNet     0.000    ||    Net            0.000    |    CentralNet     0.000\n",
+      "\t              Approx 1       0.438    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.498    |    Net            0.421    ||    Net            1.000    |    Net            0.000\n",
+      "\t              CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
+      "\t              Approx 1       0.498    |    Approx 1       0.421    ||    Approx 1       1.000    |    Approx 1       0.000\n"
      ]
     }
    ],
@@ -231,18 +292,66 @@
     "criterion = nn.BCELoss()\n",
     "optimizer = Adam(model.parameters(), lr=1e-2, weight_decay=1e-6)\n",
     "\n",
-    "model.net.nets.register_forward_hook(get_intermediate_outputs(\"parallel_out\"))\n",
+    "model.net.nets.register_forward_hook(get_intermediate_outputs_batch(\"parallel_out\"))\n",
     "\n",
     "lr = 0.001\n",
-    "num_epochs = 10\n",
+    "num_epochs = 50\n",
     "batch_size = 64\n",
     "num_splits = 10\n",
     "\n",
     "skf = model_selection.StratifiedKFold(n_splits=num_splits, shuffle=True, random_state=76)\n",
     "convnet_split_res = cross_valid(x_data, y_data, model, criterion, optimizer, skf, batch_size=batch_size, max_epoch=10)\n",
     "\n",
+    "nn_children = [name for name, _ in model.net.nets.named_children()]\n",
+    "dict_metrics = {(modelname, metric, key): list() for modelname in [\"net\"] + nn_children\n",
+    "                for metric in (\"f1score\", \"coverage0\", \"coverage1\") for key in (\"valid\", \"train\")}\n",
+    "\n",
     "for i, (train_pred, train_true, valid_pred, valid_true) in enumerate(convnet_split_res):\n",
-    "    print(i)"
+    "    out_nns = intermediate_outputs[\"parallel_out\"]\n",
+    "    for d in out_nns.values():\n",
+    "        for k, v in d.items():\n",
+    "            d[k] = v.detach().round()\n",
+    "\n",
+    "    f1prompts = []\n",
+    "    covprompts = []\n",
+    "    sep_model = f\"{'|':^9}\"\n",
+    "    for k, pred, true in [[\"valid\", valid_pred, valid_true], [\"train\", train_pred, train_true]]:\n",
+    "        net_f1_score = metrics.f1_score(true, pred, average=\"binary\")\n",
+    "        net_cov_score = cov_score(true, pred)\n",
+    "        dict_metrics[('net', 'f1score', k)].append(net_f1_score)\n",
+    "        dict_metrics[('net', 'coverage1', k)].append(net_cov_score[1])\n",
+    "        dict_metrics[('net', 'coverage0', k)].append(net_cov_score[0])\n",
+    "        covprompts.append(f\"{'Net':<15}{net_cov_score[0]:.3f}{sep_model}{'Net':<15}{net_cov_score[1]:.3f}\")\n",
+    "\n",
+    "        prev_modelname = 'Net'\n",
+    "        prev_f1_score = net_f1_score\n",
+    "\n",
+    "        for c, cname in enumerate(nn_children):\n",
+    "            modelname = 'CentralNet'if c==0 else f'Approx {c}'\n",
+    "            model_pred = out_nns[k][cname]\n",
+    "\n",
+    "            model_f1_score = metrics.f1_score(true, model_pred, average=\"binary\")\n",
+    "            model_cov_score = cov_score(true, model_pred)\n",
+    "\n",
+    "            if c%2==0:\n",
+    "                f1prompts.append(f\"{prev_modelname:<15}{prev_f1_score:.3f}{sep_model}{modelname:<15}{model_f1_score:.3f}\")\n",
+    "            else:\n",
+    "                prev_modelname = modelname\n",
+    "                prev_f1_score = model_f1_score\n",
+    "            covprompts.append(f\"{modelname:<15}{model_cov_score[0]:.3f}{sep_model}{modelname:<15}{model_cov_score[1]:.3f}\")\n",
+    "\n",
+    "            dict_metrics[(cname, 'f1score', k)].append(model_f1_score)\n",
+    "            dict_metrics[(cname, 'coverage1', k)].append(model_cov_score[1])\n",
+    "            dict_metrics[(cname, 'coverage0', k)].append(model_cov_score[0])\n",
+    "\n",
+    "        if c%2:\n",
+    "            f1prompts.append(f\"{modelname:<15}{model_f1_score:.3f}{sep_model}{'':<20}\")\n",
+    "\n",
+    "    sep_tv = f\"{'||':^10}\"\n",
+    "    print(f\"Fold {i+1:3} :            {'Valid':^49}{sep_tv}{'Train':^49}\",\n",
+    "          f\"\\tF1 score      {combine_prompts(f1prompts, sep_tv)}\",\n",
+    "          f\"\\tCoverage      {combine_prompts(covprompts, sep_tv)}\",\n",
+    "          sep='\\n')"
    ]
   }
  ],
