changed name (centralNet -> BigNet)

--- a/approx_conv.ipynb
+++ b/approx_conv.ipynb
@@ -29,8 +29,8 @@
     "\n",
     "sys.path.append(os.path.abspath(''))\n",
     "\n",
-    "import datasets\n",
     "import utils.more_torch_functions as mtf\n",
+    "import datasets\n",
     "\n",
     "from utils.custom_activations import StepActivation\n",
     "from utils.modules import Parallel, MaxLayer, MaxHierarchicalLayer\n",
@@ -153,7 +153,7 @@
     "\n",
     "        return x\n",
     "\n",
-    "class CentralConvNet(nn.Module):\n",
+    "class BigConvNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
@@ -198,7 +198,7 @@
     "\n",
     "        self.net = nn.Sequential(OrderedDict([\n",
     "            ('nets', Parallel(OrderedDict([\n",
-    "                ('cnn', CentralConvNet()),\n",
+    "                ('cnn', BigConvNet()),\n",
     "                ('apx1', ApproxConvNet()),\n",
     "            ]))),\n",
     "            ('or_', MaxLayer()),\n",
@@ -224,66 +224,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([10661, 28, 28])\n",
+      "tensor(1167) torch.Size([1185, 1])\n",
+      "tensor(5219) torch.Size([10661, 1])\n",
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.998    |    CentralNet     0.998    ||    Net            0.506    |    CentralNet     0.506\n",
+      "\tF1 score      Net            0.985    |    CentralNet     0.985    ||    Net            0.491    |    CentralNet     0.491\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            0.997    ||    Net            0.498    |    Net            0.509\n",
-      "\t              CentralNet     1.000    |    CentralNet     0.997    ||    CentralNet     0.498    |    CentralNet     0.509\n",
+      "\tCoverage      Net            0.970    |    Net            1.000    ||    Net            0.488    |    Net            0.492\n",
+      "\t              CentralNet     0.970    |    CentralNet     1.000    ||    CentralNet     0.488    |    CentralNet     0.492\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "torch.Size([10661, 28, 28])\n",
+      "tensor(1181) torch.Size([1185, 1])\n",
+      "tensor(5386) torch.Size([10661, 1])\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.999    |    CentralNet     0.999    ||    Net            0.508    |    CentralNet     0.508\n",
+      "\tF1 score      Net            0.997    |    CentralNet     0.997    ||    Net            0.505    |    CentralNet     0.505\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.998    |    Net            1.000    ||    Net            0.509    |    Net            0.508\n",
-      "\t              CentralNet     0.998    |    CentralNet     1.000    ||    CentralNet     0.509    |    CentralNet     0.508\n",
+      "\tCoverage      Net            0.997    |    Net            0.997    ||    Net            0.505    |    Net            0.505\n",
+      "\t              CentralNet     0.997    |    CentralNet     0.997    ||    CentralNet     0.505    |    CentralNet     0.505\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "torch.Size([10661, 28, 28])\n",
+      "tensor(1185) torch.Size([1185, 1])\n",
+      "tensor(5301) torch.Size([10661, 1])\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            1.000    |    CentralNet     1.000    ||    Net            0.496    |    CentralNet     0.496\n",
+      "\tF1 score      Net            1.000    |    CentralNet     1.000    ||    Net            0.497    |    CentralNet     0.497\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.496    |    Net            0.496\n",
-      "\t              CentralNet     1.000    |    CentralNet     1.000    ||    CentralNet     0.496    |    CentralNet     0.496\n",
+      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.497    |    Net            0.497\n",
+      "\t              CentralNet     1.000    |    CentralNet     1.000    ||    CentralNet     0.497    |    CentralNet     0.497\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "torch.Size([10661, 28, 28])\n",
+      "tensor(1184) torch.Size([1185, 1])\n",
+      "tensor(5379) torch.Size([10661, 1])\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.999    |    CentralNet     0.999    ||    Net            0.493    |    CentralNet     0.493\n",
+      "\tF1 score      Net            0.999    |    CentralNet     0.999    ||    Net            0.505    |    CentralNet     0.505\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            0.998    ||    Net            0.493    |    Net            0.493\n",
-      "\t              CentralNet     1.000    |    CentralNet     0.998    ||    CentralNet     0.493    |    CentralNet     0.493\n",
+      "\tCoverage      Net            0.998    |    Net            1.000    ||    Net            0.505    |    Net            0.505\n",
+      "\t              CentralNet     0.998    |    CentralNet     1.000    ||    CentralNet     0.505    |    CentralNet     0.505\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "torch.Size([10661, 28, 28])\n",
+      "tensor(1171) torch.Size([1185, 1])\n",
+      "tensor(5259) torch.Size([10661, 1])\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.993    |    CentralNet     0.993    ||    Net            0.497    |    CentralNet     0.497\n",
+      "\tF1 score      Net            0.988    |    CentralNet     0.988    ||    Net            0.496    |    CentralNet     0.496\n",
       "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.988    |    Net            0.998    ||    Net            0.491    |    Net            0.499\n",
-      "\t              CentralNet     0.988    |    CentralNet     0.998    ||    CentralNet     0.491    |    CentralNet     0.499\n",
+      "\tCoverage      Net            0.976    |    Net            1.000    ||    Net            0.488    |    Net            0.499\n",
+      "\t              CentralNet     0.976    |    CentralNet     1.000    ||    CentralNet     0.488    |    CentralNet     0.499\n",
       "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "torch.Size([10661, 28, 28])\n",
+      "tensor(1181) torch.Size([1185, 1])\n",
+      "tensor(5314) torch.Size([10661, 1])\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            1.000    |    CentralNet     1.000    ||    Net            0.507    |    CentralNet     0.507\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.507    |    Net            0.507\n",
-      "\t              CentralNet     1.000    |    CentralNet     1.000    ||    CentralNet     0.507    |    CentralNet     0.507\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.955    |    CentralNet     0.955    ||    Net            0.518    |    CentralNet     0.518\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.919    |    Net            0.988    ||    Net            0.454    |    Net            0.540\n",
-      "\t              CentralNet     0.919    |    CentralNet     0.988    ||    CentralNet     0.454    |    CentralNet     0.540\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.999    |    CentralNet     0.999    ||    Net            0.497    |    CentralNet     0.497\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.998    |    Net            1.000    ||    Net            0.497    |    Net            0.497\n",
-      "\t              CentralNet     0.998    |    CentralNet     1.000    ||    CentralNet     0.497    |    CentralNet     0.497\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.994    |    CentralNet     0.994    ||    Net            0.502    |    CentralNet     0.502\n",
-      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.997    |    Net            0.992    ||    Net            0.504    |    Net            0.501\n",
-      "\t              CentralNet     0.997    |    CentralNet     0.992    ||    CentralNet     0.504    |    CentralNet     0.501\n",
-      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
-      "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      Net            0.438    |    CentralNet     0.000    ||    Net            0.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.438    |                            ||    Approx 1       0.000    |                        \n",
-      "\tCoverage      Net            0.498    |    Net            0.421    ||    Net            1.000    |    Net            0.000\n",
+      "\tF1 score      Net            0.997    |    CentralNet     0.000    ||    Net            0.499    |    CentralNet     0.000\n",
+      "\t              Approx 1       0.997    |                            ||    Approx 1       0.499    |                        \n",
+      "\tCoverage      Net            0.998    |    Net            0.995    ||    Net            0.497    |    Net            0.500\n",
       "\t              CentralNet     1.000    |    CentralNet     0.000    ||    CentralNet     1.000    |    CentralNet     0.000\n",
-      "\t              Approx 1       0.498    |    Approx 1       0.421    ||    Approx 1       1.000    |    Approx 1       0.000\n"
+      "\t              Approx 1       0.998    |    Approx 1       0.995    ||    Approx 1       0.497    |    Approx 1       0.500\n",
+      "torch.Size([10662, 28, 28])\n",
+      "tensor(1179) torch.Size([1184, 1])\n",
+      "tensor(5319) torch.Size([10662, 1])\n",
+      "Fold   7 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.996    |    CentralNet     0.996    ||    Net            0.499    |    CentralNet     0.499\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.997    |    Net            0.995    ||    Net            0.499    |    Net            0.499\n",
+      "\t              CentralNet     0.997    |    CentralNet     0.995    ||    CentralNet     0.499    |    CentralNet     0.499\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "torch.Size([10662, 28, 28])\n",
+      "tensor(1184) torch.Size([1184, 1])\n",
+      "tensor(5341) torch.Size([10662, 1])\n",
+      "Fold   8 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            1.000    |    CentralNet     1.000    ||    Net            0.501    |    CentralNet     0.501\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            1.000    |    Net            1.000    ||    Net            0.501    |    Net            0.501\n",
+      "\t              CentralNet     1.000    |    CentralNet     1.000    ||    CentralNet     0.501    |    CentralNet     0.501\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "torch.Size([10662, 28, 28])\n",
+      "tensor(1180) torch.Size([1184, 1])\n",
+      "tensor(5330) torch.Size([10662, 1])\n",
+      "Fold   9 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.997    |    CentralNet     0.997    ||    Net            0.500    |    CentralNet     0.500\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.997    |    Net            0.997    ||    Net            0.500    |    Net            0.500\n",
+      "\t              CentralNet     0.997    |    CentralNet     0.997    ||    CentralNet     0.500    |    CentralNet     0.500\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n",
+      "torch.Size([10662, 28, 28])\n",
+      "tensor(1182) torch.Size([1184, 1])\n",
+      "tensor(5351) torch.Size([10662, 1])\n",
+      "Fold  10 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      Net            0.998    |    CentralNet     0.998    ||    Net            0.502    |    CentralNet     0.502\n",
+      "\t              Approx 1       0.000    |                            ||    Approx 1       0.000    |                        \n",
+      "\tCoverage      Net            0.997    |    Net            1.000    ||    Net            0.502    |    Net            0.501\n",
+      "\t              CentralNet     0.997    |    CentralNet     1.000    ||    CentralNet     0.502    |    CentralNet     0.501\n",
+      "\t              Approx 1       1.000    |    Approx 1       0.000    ||    Approx 1       1.000    |    Approx 1       0.000\n"
      ]
     }
    ],
@@ -316,6 +346,7 @@
     "    covprompts = []\n",
     "    sep_model = f\"{'|':^9}\"\n",
     "    for k, pred, true in [[\"valid\", valid_pred, valid_true], [\"train\", train_pred, train_true]]:\n",
+    "        print(torch.count_nonzero(true == pred), pred.shape)\n",
     "        net_f1_score = metrics.f1_score(true, pred, average=\"binary\")\n",
     "        net_cov_score = cov_score(true, pred)\n",
     "        dict_metrics[('net', 'f1score', k)].append(net_f1_score)\n",
@@ -327,7 +358,7 @@
     "        prev_f1_score = net_f1_score\n",
     "\n",
     "        for c, cname in enumerate(nn_children):\n",
-    "            modelname = 'CentralNet'if c==0 else f'Approx {c}'\n",
+    "            modelname = 'Big Network'if c==0 else f'Approx {c}'\n",
     "            model_pred = out_nns[k][cname]\n",
     "\n",
     "            model_f1_score = metrics.f1_score(true, model_pred, average=\"binary\")\n",
